builder/tests/08-unrecognized-attribute.stderr
error: unrecognized key: eac, valid keys are: ["each"]
  --> tests/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
